Bug 512940 - Icon rating always shows five white stars
Summary: Icon rating always shows five white stars
Status: RESOLVED FIXED
Alias: None
Product: dolphin
Classification: Applications
Component: view-engine: icons mode (other bugs)
Version First Reported In: 25.08.2
Platform: Fedora RPMs Linux
: NOR normal
Target Milestone: ---
Assignee: Dolphin Bug Assignee
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2025-12-04 14:02 UTC by fabrice salvaire
Modified: 2025-12-08 12:14 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description fabrice salvaire 2025-12-04 14:02:59 UTC
SUMMARY
When we enable the display of the rating for icons, it always shows five white stars.

Gwenview doesn't have this issue for files, but folder rating is also broken.

STEPS TO REPRODUCE
1. set the rating for a folder or file using the panel
2. enable icon rating

OBSERVED RESULT
Rating always shows five white stars

EXPECTED RESULT
Updated rating

SOFTWARE/OS VERSIONS
Linux/KDE Plasma: Fedora 42 RPM
KDE Plasma Version: 6.5.3
KDE Frameworks Version: 6.20.0
Qt Version: 6.9.3

ADDITIONAL INFORMATION
Comment 1 Bug Janitor Service 2025-12-08 09:51:03 UTC
A possibly relevant merge request was started @ https://invent.kde.org/system/dolphin/-/merge_requests/1121
Comment 2 Pan Zhang 2025-12-08 12:14:47 UTC
Git commit 43afb7f57136593db69c0d724ca198642d0191a6 by Pan Zhang.
Committed on 08/12/2025 at 09:28.
Pushed by meven into branch 'master'.

kfileitemmodel: Fix folder/file icon rating display

Fix the issue where enabling icon rating always showed five white stars. Retrieve the correct rating from KFileMetaData::UserMetaData for local files and insert it into the item data. This ensures both files and folders display the updated rating correctly.

M  +9    -0    src/kitemviews/kfileitemmodel.cpp

https://invent.kde.org/system/dolphin/-/commit/43afb7f57136593db69c0d724ca198642d0191a6